manifests/turnero/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-turnero-back
spec:
  ports:
  - port: 1337
    protocol: TCP
    targetPort: 1337
  selector:
    app: turnero
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
