manifests/turnero/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: svc-turnero-front
spec:
  ports:
  - port: 4200
    protocol: TCP
    targetPort: 4200
  selector:
    app: turnero
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
